# tab-conductor

./: .gitignore  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-drafter.yml  release.yml  security.yml  welcome.yml
docs/: ARCHITECTURE.md  COMPARISON.md  PERFORMANCE.md  SECURITY_THREAT_MODEL.md
examples/scenario_a_refactor/: README.md  plan.yaml
examples/scenario_b_translate/: README.md  plan.yaml
examples/scenario_c_multi_provider/: README.md  plan.yaml
examples/scenario_d_pipeline/: README.md  plan.yaml
examples/scenario_e_repro/: README.md  plan.yaml
scripts/: demo.sh  install_skill.sh
skill/: SKILL.md
skill/assets/: architecture.mermaid
skill/references/: architecture.md  ipc-protocol.md  troubleshooting.md
skill/references/schemas/: event.schema.json  state.schema.json  (+1 more)
src/tab_conductor/: __init__.py  cli.py  cost_guard.py  exceptions.py  hmac_signer.py  logging_config.py  orchestrator.py  plan_parser.py  query.py  runner.py  schema.py  secret_filter.py  state.py  stuck_detector.py  tmux_dashboard.py  ulid.py
tests/: conftest.py
tests/fixtures/: mock_worker.sh
tests/integration/: test_concurrent_state.py  test_dag.py  test_mock_worker.py  test_retry.py  test_secret_env.py
tests/unit/: test_cli.py  test_cost_guard.py  test_hmac_signer.py  test_plan_parser.py  test_plan_parser_property.py  test_property_state.py  test_query.py  test_schema.py  test_secret_filter.py  test_state.py  test_stuck_detector.py  test_ulid.py
(+4 files in other folders)
