[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tab-conductor"
version = "0.1.1"
description = "Stable, observable multi-tab orchestrator skill for Claude Code — supervisor + worker subprocesses with JSON state, cost cap, secret deny, stuck detection, and post-mortem persistence."
license = { text = "MIT" }
authors = [{ name = "hinanohart" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23",
    "python-ulid>=2.7",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.112",
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest-timeout>=2.3",
    "types-jsonschema>=4.23",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/hinanohart/tab-conductor"
Repository = "https://github.com/hinanohart/tab-conductor"
Issues = "https://github.com/hinanohart/tab-conductor/issues"
Changelog = "https://github.com/hinanohart/tab-conductor/blob/main/CHANGELOG.md"
Documentation = "https://github.com/hinanohart/tab-conductor#readme"

[project.scripts]
tab-conductor = "tab_conductor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tab_conductor"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests requiring live subprocesses"]
timeout = 30
